<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logo_large"
        android:orientation="horizontal"
        android:padding="15dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_2" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_4" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_8" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_16" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_32" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_64" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_128" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_256" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_512" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_1024" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_2048" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gameModes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="2">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_columnSpan="2"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/app_icon_bg"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/logo_large">

        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/game4by4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_rectangle_clickable"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4x4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/easy"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/game5by5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_rectangle_clickable"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5x5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/normal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/game6by6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_rectangle_clickable"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6x6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/hard"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/game8by8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/background_rectangle_clickable"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8x8"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/text_white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/hardcore"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/text_white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </GridLayout>


</RelativeLayout>