<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".GameActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:layout_toLeftOf="@id/layoutScore"
        android:background="@drawable/app_icon_bg"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logo_large">

    </androidx.appcompat.widget.AppCompatImageView>

    <LinearLayout
        android:id="@+id/layoutScore"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@id/layoutHighscore"
        android:background="@drawable/background_rectangle"
        android:gravity="center"
        android:minWidth="100dp"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHighscore"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@drawable/background_rectangle"
        android:gravity="center"
        android:minWidth="100dp"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/highscore"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewHighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/text_white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/colors"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_below="@id/logo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@id/buttonUndo"
        android:background="@drawable/background_rectangle"
        android:orientation="horizontal"
        android:padding="10dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_2" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_4" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_8" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_16" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_32" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_64" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_128" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_256" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_512" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_1024" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/cell_2048" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonUndo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_below="@id/logo"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@id/buttonRefresh"
        android:background="@drawable/background_rectangle_clickable"
        app:srcCompat="@drawable/ic_undo" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonRefresh"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_below="@id/logo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_rectangle_clickable"
        app:srcCompat="@drawable/ic_refresh" />

    <com.example.color2048.GameView
        android:padding="10dp"
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/textViewHint"
        android:layout_below="@id/colors" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="start"
        android:paddingLeft="10dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:text="@string/text_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</RelativeLayout>